--- a/ParaBank/ParaBank.csproj
+++ b/ParaBank/ParaBank.csproj
@@ -7,10 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="ExtentReports.signed" Version="3.1.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0-preview-20220131-20" />
     <PackageReference Include="Microsoft.Playwright" Version="1.19.1" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="SpecFlow" Version="3.9.58" />
+    <PackageReference Include="SpecFlow.NUnit" Version="3.9.58" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
-    <PackageReference Include="SpecRun.SpecFlow" Version="3.9.31" />
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
   </ItemGroup>
 
