--- a/ParaBank/ParaBank.csproj
+++ b/ParaBank/ParaBank.csproj
@@ -11,8 +11,10 @@
     <PackageReference Include="Microsoft.Playwright" Version="1.19.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="ReportPortal.SpecFlow" Version="3.3.0" />
     <PackageReference Include="SpecFlow" Version="3.9.58" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.9.58" />
+    <PackageReference Include="SpecFlow.NUnit.Runners" Version="3.9.58" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
   </ItemGroup>
